<resources>
    <string name="app_name" translatable="false">SecureShellV</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="kill">Destroy</string>
    <string name="check">Check</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="full_internet_access">Has Access</string>
    <string name="restricted_internet_access">Iran Intranet Access</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="network_unavailable">Please Connect to a Network.</string>
    <string name="internet_access_state">Internet State</string>
    <string name="direct_ssh">Direct</string>
    <string name="tls_ssh">Dual-Hop TLS</string>
    <string name="dual_hop_ssh">Dual-Hop</string>
    <string name="action_close_session" translatable="false">Close session</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signing_in_loading">Signing in…</string>
    <string name="cannot_access_server">Cannot access server</string>
    <string name="bottom_sheet_home">Home</string>
    <string name="bottom_sheet_account">Account</string>
    <string name="bottom_sheet_settings">Settings</string>
    <string name="bottom_sheet_server">Server</string>
    <string name="bottom_sheet_more">More</string>
    <string name="username">Username</string>
    <string name="end_credit_date">End Credit Date</string>
    <string name="remaining">Remaining</string>
    <string name="used">Used</string>
    <string name="total">Total</string>
    <string name="unlimited_time">Unlimited Time</string>
    <string name="unlimited_data">Unlimited Data</string>
    <string name="connected_ips">Current Connected IPs</string>
    <string name="data_limit">Used Traffic</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="no_location_selected">No Location Selected</string>
    <string name="rapid_reconnect">Rapid Reconnect</string>
    <string name="auto">Auto</string>
    <string name="connect_to_iran_server">Connect To Iran Server</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="app_filter">App Filter:</string>
    <string name="select_apps">Select Apps</string>
    <string name="exclude">Exclude</string>
    <string name="include">Include</string>
    <string name="info_about_app_filter" translatable="false">Info about app filter</string>
    <string name="selected">Selected:</string>
    <string name="off">Off</string>
    <string name="selected_app_alert">If you include apps, the VPN will only route the specified apps. \tif you exclude apps, the VPN will route everything except the selected apps. (e.g: Mobile banking apps)</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="apply">Apply</string>
    <string name="what_is_app_filter">What is App Filter?</string>
    <string name="search">Search</string>
    <string name="connection_quality">VPN Quality:</string>
    <string name="internet_quality">Internet Quality:</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="dash" translatable="false">-</string>
    <string name="ip" translatable="false">ip:</string>
    <string name="vpn_toggle_accessibility">Vpn toggle</string>
    <string name="application_language">Application Language:</string>
    <string name="english" translatable="false">English</string>
    <string name="persian" translatable="false">فارسی</string>
    <string name="restart_app">Restart App</string>
    <string name="persistent_notification">Persistent Notification</string>
    <string name="persistent_notification_switch_hint">By enabling this option, the VPN notification will not go away after turning off the VPN.</string>
    <string name="data_limit_reached">You have reached your data limit</string>
    <string name="insufficient_data">Insufficient data</string>
    <string name="credit_expired">Credit expired</string>
    <string name="credit_time_has_run_out">Credit time has run out.</string>
    <string name="renew">Renew Service</string>
    <string name="card_number">Card Number:</string>
    <string name="amount">Price(Toman):</string>
    <string name="renew_credit_description">To resubscribe, please first select your desired package and duration, then transfer the specified amount to the following card number and submit the receipt\'s image below.</string>
    <string name="select_receipt">Select Receipt</string>
    <string name="submit">Submit</string>
    <string name="please_select">Please Select</string>
    <string name="duration">Duration:</string>
    <string name="duration_no_colon">Duration</string>

    <string name="plan">Package:</string>
    <string name="gold_plans">Special</string>
    <string name="processing_data">Processing Data</string>
    <string name="left">left</string>
    <plurals name="days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d Month</item>
        <item quantity="other">%d Months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d Year</item>
        <item quantity="other">%d Years</item>
    </plurals>
    <plurals name="users">
        <item quantity="one">%d user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="gigs">GB</string>
    <string name="toman">Toman</string>
    <string name="unlimited">Unlimited</string>
    <string name="what_is_gold_plan">What is VIP plan?</string>
    <string name="gold_plan_alert_info">In the VIP plan, the VPN utilizes servers located in iran to connect to the destination server. This will improve VPN quality and reduce disconnection. \nNote: Packages in the VIP plan have limited data usage.</string>
    <string name="silver_plans">Normal(Unlimited)</string>
    <string name="silver_plan_alert">Please note that in the normal plan, the probability of slow connection is higher due to direct connection to VPN servers.(No tunnel)</string>
    <string name="submit_successful">Submit Successful</string>
    <string name="please_select_a_plan_first">Please select a plan first</string>
    <string name="already_requested_renewal">Your Request is being processed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_out">Log out</string>
    <string name="are_you_sure_about_logging_out">Are you sure about logging out?</string>
    <string name="confirmation">Confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="fail_to_connect_to_server">Failed To Connect To Server</string>
    <string name="couldn_t_send_stats_to_server">Couldn\'t send stats to server.</string>
    <string name="select_package">Select Package</string>
    <string name="package_type">Package Type:</string>
    <string name="limited">Limited</string>
    <string name="rial">Rial</string>
    <string name="transfer_the_specified_amount">Transfer the specified amount to the card number below and then submit your receipt.\n • Your request will be processed by an operator.</string>
    <string name="already_submitted">Already Submitted</string>
    <string name="service_start_failed">Service Start Failed</string>
    <string name="restarting_connection">Restarting Connection</string>
    <string name="connection_delay">Delay:</string>
    <string name="timeout" translatable="false">Timeout</string>
    <string name="current_package">Current Package</string>
    <string name="will_automatically_renew">Will Automatically Renew</string>
    <string name="renew_current">Renew Current</string>
    <string name="package_select">Package Select</string>
</resources>