<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.bottomsheet.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_divider"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_filter"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/app_filter_info"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_info"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/info_about_app_filter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/app_filter_mode_radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/off_app_filter_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/off" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/exclude_app_filter_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exclude" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/include_app_filter_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/include" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_apps_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/select_apps"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>