<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resubscribe.SelectServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_container_background"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle"
            tools:context=".resubscribe.CheckoutActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_package"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:divider="@drawable/empty_divider"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/package_type"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/typeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/goldRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/gold_plans" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/normalRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:text="@string/silver_plans" />
                </RadioGroup>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/service_items_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/fragment_service_package_item" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryContainerOpaque"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?attr/colorOnPrimaryContainer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/processing_data"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>