<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundDrawable"
    tools:context=".MainActivityTest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp">

        <ImageButton
            android:id="@+id/vpn_toggle"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/vpn_toggle_animation"
            android:src="@drawable/vpn_toggle_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="5dp"
            android:showDividers="middle"
            app:layout_constraintTop_toBottomOf="@+id/vpn_toggle">

            <TextView
                android:id="@+id/main_connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_divider"
                android:gravity="center"
                android:layoutDirection="ltr"

                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0.0.0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_divider"
                android:gravity="center"
                android:layoutDirection="ltr"

                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_quality"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/n_a"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_divider"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_quality"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/dash"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/bottom_sheet_menu_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bottom_sheet_sharp_menu"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:labelFor="@+id/tab_layout"
            android:layerType="software"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorHeight="10dp"
            app:tabMode="fixed"
            app:tabRippleColor="@android:color/transparent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/bottom_sheet_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSecondaryContainer" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
